--- a/index.html
+++ b/index.html
@@ -40,5 +40,13 @@
         <li>Playing cricket</li>
     </ol>
     <hr>
+    <h1>PROJECTS</h1>
+    <p>Pneumatic sheet metal cutting</p>
+    <p>Thermal analysis of piston using different metals</p>
+    
+    <hr>
+    <address>CONTACT DETAILS <BR>
+        EMAIL: sathiyapriyan7@gmail.com <br>
+        MOB NO : 9943160100</address>
 </body>
 </html>
